--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 version: '3'
 services:
   app:
-    container_name: docker-node-mongo
+    container_name: faces_api
     restart: always
     build: .
     ports:
-      - '80:3000'
-    links:
-      - mongo
-  mongo:
-    container_name: mongo
-    image: mongo
-    ports:
-      - '27017:27017'
+      - '8888:3000'
+    networks:
+      - face-sentiment
+networks:
+  face-sentiment:
+    external: true
